--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,6 +13,12 @@
         <p><b>Description: </b> {{contact.description}}</p>
         <p><b>Category: </b> {{contact.category.name}}</p>
 
+        <p>
+            {% if contact.picture %}
+                <img src="{{ contact.picture.url }}" alt="{{ contact.first_name }} {{ contact.last_name }}">
+            {% endif %}
+        </p>
+
         <div class="contact-links">
             <a class='btn btn-link' href="{% url "contact:update" contact.id %}">update</a>
 
